# smolagents

./: .dockerignore  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  setup.ps1
examples/: __init__.py  gradio_ui.py  publication_helpers.py  publication_mining_agent.py  publication_tools.py  qdrant_memory_example.py  shared_agent_utils.py  streamlit_ui.py  streamlit_ui_advanced.py
examples/open_deep_research/: app.py  run.py  run_gaia.py
examples/open_deep_research/scripts/: reformulator.py  run_agents.py  text_inspector_tool.py  text_web_browser.py  visual_qa.py
src/intelcore/: __init__.py
src/intelcore/memory_backends/: __init__.py
src/smolagents/: __init__.py  agents.py  default_tools.py  import_risk.py  local_python_executor.py  memory.py  streamlit_ui.py  streamlit_ui_advanced.py  tools.py  utils.py
src/smolagents/memory_backends/: __init__.py  memory_backends.py  qdrant_backend.py
src/smolagents/prompts/: code_agent.yaml
tests/: test_publication_mining_agent.py  test_streamlit_ui.py
